# voip

./: .gitignore  ARCHITECTURE.md  CHANGES_DIFF.md  DELIVERY.md  DEPLOYMENT.md  FEATURES.md  FIXES_IMPLEMENTED.md  INDEX.md  PROJECT_DOCUMENTATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  START_HERE.txt  TESTING.md  TIMER_FIX_SUMMARY.md  TIMER_FIX_TEST.md  VERIFICATION.md  VISUAL_FIXES.md  VM_SETUP.md  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
backend/: Cargo.toml  README.md  generate_cert.py
backend/src/: audio_udp.rs  call_manager.rs  io.rs  jitter.rs  main.rs  packet.rs  signaling.rs  user.rs
frontend/: app.js  index.html  serve_https.py  styles.css
