[package]
name = "voip-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.7"
actix-files = "0.6"
actix-rt = "2"
rustls = "0.20"
rustls-pemfile = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
cpal = "0.15"

[profile.release]
opt-level = 3
